--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://coms-309-009.cs.iastate.edu:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=fe0f64a3a61748a0
