--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://coms-309-009.cs.iastate.edu:3306/db_example
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/coms309_roundtrip
 spring.datasource.username=root
-spring.datasource.password=fe0f64a3a61748a0
+spring.datasource.password=January01GE
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
