--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://coms-309-009.cs.iastate.edu:3306/cryptoShop
 spring.datasource.username=root
 spring.datasource.password=a00bb8f3076714b6
