--- a/Experiments/Evan/demo2/app/src/main/AndroidManifest.xml
+++ b/Experiments/Evan/demo2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".demo2"
+            android:exported="true" />
+        <activity
             android:name=".activity_signup"
             android:exported="true">
             <intent-filter>
@@ -23,8 +26,7 @@
         </activity>
         <activity
             android:name=".activity_login"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
