--- a/Frontend/demo2/app/src/main/AndroidManifest.xml
+++ b/Frontend/demo2/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".Profileactivity"
-            android:exported="true" />
-        <activity
-            android:name=".Profile"
-            android:exported="true" />
-        <activity
             android:name=".demo2"
             android:exported="true" />
         <activity
             android:name=".activity_signup"
+            android:exported="true"></activity>
+        <activity
+            android:name=".activity_login"
+            android:exported="true" />
+        <activity
+            android:name=".activity_landing"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,11 +31,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity_login"
-            android:exported="true" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
