trying to get it to work

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 maven-build: #this is a job
   stage: maventry
   tags:
-    - spring_boot #this is the link to the shell runner on the server
+    - springboot_tag #this is the link to the shell runner on the server
   script:
     - cd Backend/
     - mvn package -B
