--- a/Frontend/demo2/app/src/main/AndroidManifest.xml
+++ b/Frontend/demo2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="test.connect.myapplication">
+    package="test.connect.myapplication" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,19 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".SecondActivity"
+            android:exported="true" />
         <activity
             android:name=".demo2"
             android:exported="true" />
         <activity
             android:name=".activity_signup"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activity_login"
             android:exported="true" />
         <activity
             android:name=".activity_landing"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +35,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
         </activity>
     </application>
 
