--- a/Frontend/demo2/app/src/main/AndroidManifest.xml
+++ b/Frontend/demo2/app/src/main/AndroidManifest.xml
@@ -13,11 +13,14 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activity_product"
+            android:exported="true" />
+        <activity
             android:name=".demo2"
             android:exported="true" />
         <activity
             android:name=".activity_signup"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activity_login"
             android:exported="true" />
@@ -32,8 +35,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
