--- a/Frontend/demo2/app/src/main/AndroidManifest.xml
+++ b/Frontend/demo2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activity_third"
+            android:exported="true" />
+        <activity
+            android:name=".activity_favorite"
+            android:exported="true" />
+        <activity
             android:name=".activity_nike"
             android:exported="true" />
         <activity
