--- a/Frontend/demo2/app/src/main/AndroidManifest.xml
+++ b/Frontend/demo2/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
             android:name=".activity_login"
             android:exported="true" />
         <activity
+            android:name=".activity_product"
+            android:exported="true" />
+        <activity
             android:name=".activity_landing"
             android:exported="true">
             <intent-filter>
